# rust-ransomware

./: Cargo.toml  build.rs  readme.md  resources.rc
src/: config.rs  encryption.rs  main_decryptor.rs  main_ransomw.rs  utils.rs  walker.rs  walker_decryptor.rs
